# pyconcat

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
PyConcat/: launch.bat  launch.py
PyConcat/config/: __init__.py  config.py
PyConcat/ctrl/: __init__.py  ctrl_main.py
PyConcat/libs/: __init__.py  lib.py
PyConcat/ui/: __init__.py  common.py  dialog.py  ui.py
